tests/invalidTest/other/func_declare_twice2.q
# EXPECT the function has been declared
def void errorTest();

def uint32 errorTest();